--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     implementation "com.android.support:multidex:1.0.1"
     compile "com.android.support:design:$support_version"
+    implementation "com.github.bumptech.glide:glide:4.0.0"
     // support
     // anko
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
